Bug 402799: Saved searches that match on tags show duplicates, patch by Marco Bonardo <mak77@supereva.it>, r=dietrich, a=beltzner