toolkit/components/places/tests/unit/test_resolveNullBookmarkTitles.js
@@ -69,27 +69,28 @@ function run_test() {
   var uri1 = uri("http://foo.tld/");
   var uri2 = uri("https://bar.tld/");
 
+  bhist.addPageWithDetails(uri1, "foo title", Date.now() * 1000);
+  bhist.addPageWithDetails(uri2, "bar title", Date.now() * 1000);
+
+  bmsvc.insertBookmark(bmsvc.bookmarksMenuFolder, uri1, bmsvc.DEFAULT_INDEX, null);
+  bmsvc.insertBookmark(bmsvc.bookmarksMenuFolder, uri2, bmsvc.DEFAULT_INDEX, null);
+  
   tagssvc.tagURI(uri1, ["tag 1"]);
   tagssvc.tagURI(uri2, ["tag 2"]);
 
-  bhist.addPageWithDetails(uri1, "foo title", Date.now() * 1000);
-
-  bhist.addPageWithDetails(uri2, "bar title", Date.now() * 1000);
-
   var options = histsvc.getNewQueryOptions();
   options.queryType = Ci.nsINavHistoryQueryOptions.QUERY_TYPE_BOOKMARKS;
-  options.maxResults = 2;
-
-  options = histsvc.getNewQueryOptions();
-  options.queryType = Ci.nsINavHistoryQueryOptions.QUERY_TYPE_BOOKMARKS;
-  options.maxResults = 2;
+  options.resultType = options.RESULTS_AS_TAG_CONTENTS;
 
   var query = histsvc.getNewQuery();
-  query.setFolders([bmsvc.tagsFolder], 1);
+  // if we don't set a tag folder, RESULTS_AS_TAG_CONTENTS will return all
+  // tagged URIs
   var result = histsvc.executeQuery(query, options);
   var root = result.root;
   root.containerOpen = true;
   do_check_eq(root.childCount, 2);
-  do_check_eq(root.getChild(0).title, "foo title");
-  do_check_eq(root.getChild(1).title, "bar title");
+  // actually RESULTS_AS_TAG_CONTENTS return results ordered by place_id DESC
+  // so they are reversed
+  do_check_eq(root.getChild(0).title, "bar title");
+  do_check_eq(root.getChild(1).title, "foo title");
 }
